[package]
name = "portfolio_webhook"
version = "0.1.0"
authors = ["Hosshii <sao_heath6147.wistre@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
github_webhook = { git = "https://github.com/hosshii/github_webhook.git", branch = "main" }
rust_traq = { git = "https://github.com/hosshii/rust_traq.git", branch = "main" }
actix-web = "3.3.2"
hmac = "0.10.1"
sha2 = "0.9.3"
