[package]
name = "portfolio_webhook"
version = "0.1.0"
authors = ["Hosshii <sao_heath6147.wistre@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
github_webhook = { git = "https://github.com/hosshii/github_webhook.git", branch = "main" }
rust_traq = { git = "https://github.com/hosshii/rust_traq.git", branch = "main" }
actix-web = "3.3.2"
ring = "0.16.20"
hex = "0.4.3"
futures-util = "0.3.13"
futures = "0.3.13"
anyhow = "1.0.40"
