[package]
name = "portfolio_webhook"
version = "0.1.0"
authors = ["Hosshii <sao_heath6147.wistre@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
github_webhook = { git = "https://github.com/hosshii/github_webhook.git", branch = "main" }
actix-web = "3.3.2"
ring = "0.16.20"
hex = "0.4.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
reqwest = "0.11.2"
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"
